[package]
name = "mono_slam"
version = "0.1.0"
authors = ["Sebastian <sebasgarcep@gmail.com>"]

[dependencies]
image = "0.23.10"
piston_window = "0.113.0"
nalgebra = "0.22.0"
lazy_static = "1.4.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
streaming-stats = "0.2.3"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "shi_tomasi"
path = "src/bin/shi_tomasi.rs"
